Only Show One Card In Small Screens & Close SideNav On GoTo

--- a/cards/layout.html
+++ b/cards/layout.html
@@ -1,4 +1,4 @@
-<md-card flex-gt-xs ng-init="getData()">
+<md-card flex ng-init="getData()">
     <md-toolbar md-colors="{background: color, color: 'grey-A100'}">
         <div class="md-toolbar-tools" flex>
             <md-icon md-font-icon="fa fa-{{ icon }} fa-fw"></md-icon>
