--- a/layout.html
+++ b/layout.html
@@ -27,7 +27,7 @@
         </md-sidenav>
         <md-content layout="column" md-colors="::{background: 'accent-50'}" flex>
             <md-toolbar md-whiteframe="1" md-colors="::{background: 'grey-A100'}">
-                <div class="md-toolbar-tools" id="toolbar">
+                <div class="md-toolbar-tools" id="toolbar" layout="row">
                     <md-button ng-show="$ls.loggedIn" class="md-icon-button md-accent md-hue-3"
                                ng-click="toggleSidenav(true)">
                         <md-icon md-font-icon="fa fa-bars fa-lg"></md-icon>
