--- a/calendar.html
+++ b/calendar.html
@@ -10,12 +10,8 @@
         calendar-direction="$ls.selected.calDir"
         title-format="'MMMM y'"
         ng-model="selectedDate"
-        week-starts-on="firstDayOfWeek"
-        tooltips="tooltips"
+        week-starts-on="6"
+        tooltips="false"
         day-format="$ls.selected.calDir == 'vertical' ? 'EEE, d' : 'd'"
-        day-label-format="'EEE'"
-        day-label-tooltip-format="'EEEE'"
-        day-tooltip-format="'fullDate'"
-        day-content="setDayContent"
-        disable-future-selection="false"></calendar-md>
+        day-content="setDayContent"></calendar-md>
 </md-card>
