--- a/courses.html
+++ b/courses.html
@@ -20,7 +20,7 @@
         </md-toolbar>
         <md-content flex>
             <md-list flex>
-                <md-list-item ng-repeat="document in $ls.documents | filter: {'course': $ls.selected.course} | orderBy: 'uploadDate'"
+                <md-list-item ng-repeat="document in $ls.documents | filter: {'course': $ls.selected.course} | orderBy: 'uploadDate' | limitTo: 25"
                               class="md-2-line documents" ng-click="openFile(document)">
                     <div class="md-list-item-text" flex>
                         <h3>{{ document.title }}</h3>
