Fix Multiple Card API Requests By Only Watching Dynamic Card

--- a/dashboard.html
+++ b/dashboard.html
@@ -11,10 +11,9 @@
             <card ng-repeat="card in cards[2]" template="card"></card>
         </div>
     </div>
-    <card layout="column" flex-gt-xs="33" template="$media('gt-xs') ? cards[1] : $ls.selected.card"></card>
+    <card layout="column" flex-gt-xs="33" template="$media('gt-xs') ? cards[1] : $ls.selected.card" dynamic="true"></card>
 </div>
-<md-nav-bar md-selected-nav-item="$ls.selected.card" class="md-accent md-hue-2 md-whiteframe-4dp hide-gt-xs"
-            ng-init="$ls.selected.card = $ls.selected.card || cards[1]">
+<md-nav-bar md-selected-nav-item="$ls.selected.card" class="md-accent md-hue-3 md-whiteframe-4dp hide-gt-xs">
     <md-nav-item ng-repeat="card in [].concat.apply([], cards) | filter: '!courses'"
                  md-nav-click="$ls.selected.card = card" name="{{ card }}" class="fill-width">
         {{ card }}
