--- a/cards/deadlines.html
+++ b/cards/deadlines.html
@@ -1,12 +1,12 @@
 <md-list-item class="md-2-line" ng-class="beforeDue(deadline.dueDate) ? 'removeable' : 'archived'"
-              ng-repeat="deadline in $ls.deadlines | filter: inCourse && {course: $ls.selected.course} | orderBy: '-dueDate'">
+              ng-repeat="deadline in $ls.deadlines | filter: inCourse && {course: $ls.selected.course} | orderBy: ['!dueDate', '-dueDate']">
     <div class="md-list-item-text" flex>
         <h3>{{ deadline.title }}</h3>
         <p ng-if="!inCourse">{{ $ls.courses[deadline.course].title }}</p>
     </div>
     <div class="md-list-item-text align-right">
         <h3>{{ deadline.dueDate | timeDistance }}</h3>
-        <p class="md-caption">Due {{ deadline.dueDate | date: 'shortTime' }}</p>
+        <p class="md-caption">Due {{ (deadline.dueDate | date: 'shortTime') || "Not Specified" }}</p>
     </div>
     <div class="md-secondary">
         <md-button class="md-icon-button" submit="{{ deadline.courseId }}/{{ deadline.contentId }}/">
