Various Bug Fixes And GUI Improvements And Small Tweaks

--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
-<md-dialog flex="25" md-colors="{background: 'default-grey-A100'}">
+<md-dialog flex="25" flex-xs="80" flex-sm="50" md-colors="{background: 'default-grey-A100'}">
     <form layout="column" class="no-margin" ng-submit="submit({sid, pin})">
-        <md-toolbar flex="10">
+        <md-toolbar>
             <div class="md-toolbar-tools" flex>
                 <span class="md-headline" flex>Welcome to UOS HUB</span>
                 <md-button class="md-icon-button" style="margin-left: 0" ng-click="cancel()">
