--- a/schedule.html
+++ b/schedule.html
@@ -35,7 +35,7 @@
 </md-card><!--Schedule card end-->
 
 <script type="text/ng-template" id="class-dialog">
-    <md-dialog md-colors="{background: 'default-grey-A100', color: 'default-grey-800'}" layout="column" flex="40" flex-xs="90">
+    <md-dialog class="schedule" md-colors="{background: 'default-grey-A100', color: 'default-grey-800'}" layout="column" flex="40" flex-xs="90">
         <md-toolbar flex="10" md-colors="{background: 'default-' + course.color, color: 'default-grey-A100'}">
             <div class="md-toolbar-tools" flex>
                 <span flex>{{ course.title }}</span>
