--- a/welcome.html
+++ b/welcome.html
@@ -1,4 +1,4 @@
-<div layout="column" layout-align="center center" ng-init="$ls.loggedIn && goto('dashboard')" flex>
+<div layout="column" layout-align="center center" flex>
     <div id="welcome-slogan" layout="row" layout-margin>
         <img ng-src="/static/img/slogan.png">
     </div>
