--- a/cards/holds.html
+++ b/cards/holds.html
@@ -1,11 +1,22 @@
-<md-list-item ng-if="$ls.holds">You have no holds. Yay!</md-list-item>
-<md-list-item ng-repeat="hold in $ls.holds" class="md-2-line" ng-click="null">
-    <div class="md-list-item-text">
-        <h3>{{ hold.reason }}</h3>
-        <p>{{ hold.type }}</p>
+<md-toolbar md-colors="{background: 'red-600', color: 'grey-A100'}">
+    <div class="md-toolbar-tools" flex>
+        <md-icon md-font-icon="fa fa-{{ ::icon }} fa-fw"></md-icon>
+        <span flex>Holds</span>
     </div>
-    <div class="md-list-item-text" style="max-width: 60px; text-align: center">
-        <h3>{{ parseDate(hold.end) | date: 'MMM, dd' }}</h3>
-        <p>{{ parseDate(hold.end) | date: 'yyyy' }}</p>
-    </div>
-</md-list-item>
+</md-toolbar>
+
+<md-content>
+    <md-list>
+        <md-list-item ng-if="$ls.holds">You have no holds. Yay!</md-list-item>
+        <md-list-item ng-repeat="hold in $ls.holds" class="md-2-line" ng-click="null">
+            <div class="md-list-item-text">
+                <h3>{{ hold.reason }}</h3>
+                <p>{{ hold.type }}</p>
+            </div>
+            <div class="md-list-item-text" style="max-width: 60px; text-align: center">
+                <h3>{{ parseDate(hold.end) | date: 'MMM, dd' }}</h3>
+                <p>{{ parseDate(hold.end) | date: 'yyyy' }}</p>
+            </div>
+        </md-list-item>
+    </md-list>
+</md-content>
