--- a/cards/updates.html
+++ b/cards/updates.html
@@ -1,16 +1,27 @@
-<md-list-item class="md-2-line removeable"
-              ng-repeat="update in $ls.updates | filter: inCourse && {course: $ls.selected.course} | orderBy: '-time'">
-    <div class="md-list-item-text">
-        <h3>{{ update.title }}</h3>
-        <p ng-if="!inCourse">{{ $ls.courses[update.course].title }}</p>
+<md-toolbar md-colors="{background: 'green-600', color: 'grey-A100'}">
+    <div class="md-toolbar-tools" flex>
+        <md-icon md-font-icon="fa fa-{{ ::icon }} fa-fw"></md-icon>
+        <span flex>Updates</span>
     </div>
-    <div class="md-list-item-text align-right">
-        <h3>{{ update.time | timeDistance }}</h3>
-        <p class="md-caption">{{ update.event }}</p>
-    </div>
-    <div class="md-secondary">
-        <md-button class="md-icon-button" ng-click="dismissUpdate(update.dismiss)">
-            <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
-        </md-button>
-    </div>
-</md-list-item>
+</md-toolbar>
+
+<md-content>
+    <md-list>
+        <md-list-item class="md-2-line removeable"
+                      ng-repeat="update in $ls.updates | filter: inCourse && {course: $ls.selected.course} | orderBy: '-time'">
+            <div class="md-list-item-text">
+                <h3>{{ update.title }}</h3>
+                <p ng-if="!inCourse">{{ $ls.courses[update.course].title }}</p>
+            </div>
+            <div class="md-list-item-text align-right">
+                <h3>{{ update.time | timeDistance }}</h3>
+                <p class="md-caption">{{ update.event }}</p>
+            </div>
+            <div class="md-secondary">
+                <md-button class="md-icon-button" ng-click="dismissUpdate(update.dismiss)">
+                    <md-icon md-font-icon="fa fa-trash fa-1x"></md-icon>
+                </md-button>
+            </div>
+        </md-list-item>
+    </md-list>
+</md-content>
