Animate Submit Dialog From/To Button & Color Selected Card Nav

--- a/courses.html
+++ b/courses.html
@@ -39,7 +39,7 @@
     <div layout="column" flex>
         <div layout="row" flex="50">
             <card template="'updates'"></card>
-            <card template="'deadlines'" id="confirm"></card>
+            <card template="'deadlines'"></card>
         </div>
         <div layout="row" flex>
             <md-card flex="66">
