--- a/cards/finals.html
+++ b/cards/finals.html
@@ -9,7 +9,7 @@
     <md-list>
         <md-list-item class="md-2-line" ng-repeat="final in $ls.finals | orderBy: 'date'" ng-click="null">
             <div class="md-list-item-text">
-                <h3>{{ $ls.courses[final.course].title }}</h3>
+                <h3>{{ $ls.courses[final.course].title || final.title }}</h3>
                 <p>{{ final.start }} -> {{ final.end }}</p>
             </div>
             <div class="md-list-item-text align-right fixed-56-width">
